--- a/.gitignore
+++ b/.gitignore
@@ -6,8 +6,8 @@
 .classpath
 .sass-cache/
 
-# OS generated files #
-######################
+# macOS files #
+###############
 
 __MACOSX
 .DS_Store
@@ -25,8 +25,6 @@ Thumbs.db
 # Packages #
 ############
 
-# it's better to unpack these files and commit the raw source
-# git has its own built in compression methods
 *.7z
 *.dmg
 *.gz
@@ -72,3 +70,8 @@ libmap.so
 
 *.txt
 *.csv
+
+# Editors #
+###########
+
+*.sublime-*
