--- a/.travis.yml
+++ b/.travis.yml
@@ -9,9 +9,9 @@ before_install:
   - sudo add-apt-repository -y ppa:ubuntu-toolchain-r/test
   - sudo apt-get update -qq -y
   - sudo apt-get install -qq mesa-common-dev alien libnuma1 opencl-headers git
-  #- sudo apt-get install -qq g++-4.8
-  #- export CXX="g++-4.8"
-  #- sudo update-alternatives --install /usr/bin/g++ g++ /usr/bin/g++-4.8 90
+  - sudo apt-get install -qq g++-4.8
+  - export CXX="g++-4.8"
+  - sudo update-alternatives --install /usr/bin/g++ g++ /usr/bin/g++-4.8 90
   
 install:
 
