travis cl.h cat 4

--- a/.travis.yml
+++ b/.travis.yml
@@ -32,7 +32,7 @@ install:
 script:
  - sudo updatedb
  - locate CL/cl.h
- - locate CL/cl.h | xargs cat
+ #- locate CL/cl.h | xargs cat
  #- make library
  #- cd python
  #- python test.py
