--- a/.travis.yml
+++ b/.travis.yml
@@ -21,7 +21,7 @@ install:
   - mv 54bc3d13c43fd8a9070801b09fe51830/rpm_to_deb.sh .
   - sh rpm_to_deb.sh
   - git clone https://gist.github.com/jcaraban/0ec41cde0d9a58081d10331fe231f951 # cl.h
-  - sudo mv 0ec41cde0d9a58081d10331fe231f951/cl.h /usr/include/CL/
+  - sudo mv 0ec41cde0d9a58081d10331fe231f951/cl12.h /usr/include/CL/cl.h
   - sudo mkdir /etc/OpenCL
   - sudo mkdir /etc/OpenCL/vendors
   - sudo ln -s /opt/intel/opencl-1.2-6.4.0.25/etc/intel64.icd /etc/OpenCL/vendors/intel64.icd
