--- a/.travis.yml
+++ b/.travis.yml
@@ -14,14 +14,18 @@ before_install:
   - sudo update-alternatives --install /usr/bin/g++ g++ /usr/bin/g++-4.8 90
   
 install:
+  # get intel opencl drivers, untar, move into /rpm folder
   - wget http://registrationcenter-download.intel.com/akdlm/irc_nas/9019/opencl_runtime_16.1.1_x64_ubuntu_6.4.0.25.tgz
   - tar -xvf opencl_runtime_16.1.1_x64_ubuntu_6.4.0.25.tgz
   - cd opencl_runtime_16.1.1_x64_ubuntu_6.4.0.25/rpm
+  # get rpm_to_dev, translate rpm packages and install deb pacakage
   - git clone https://gist.github.com/jcaraban/54bc3d13c43fd8a9070801b09fe51830 # rpm_to_dev
   - mv 54bc3d13c43fd8a9070801b09fe51830/rpm_to_deb.sh .
   - sh rpm_to_deb.sh
+  # get updated opencl headers and move then to /usr/include/
   - git clone https://gist.github.com/jcaraban/0ec41cde0d9a58081d10331fe231f951 # cl headers
   - sudo mv 0ec41cde0d9a58081d10331fe231f951/* /usr/include/CL/
+  # make the ICL loader aware of intel opencl
   - sudo mkdir /etc/OpenCL
   - sudo mkdir /etc/OpenCL/vendors
   - sudo ln -s /opt/intel/opencl-1.2-6.4.0.25/etc/intel64.icd /etc/OpenCL/vendors/intel64.icd
